# data-for-tsfms

./: .gitignore  PLAN.md  README.md  evaluate.py  pyproject.toml  run_cloudops_experiment.sh  run_experiment.sh  run_smoke_test.sh  train.py
configs/: evaluate.yaml  prepare_energy.yaml  prepare_transport.yaml  train_energy_only.yaml  train_joint.yaml  train_transport_only.yaml
configs/base/: datasets.yaml  model.yaml  training.yaml
configs/evaluate/: default.yaml  transport_only.yaml
configs/evaluate_fev/: default.yaml  energy.yaml  joint.yaml  transport.yaml
configs/prepare/: energy.yaml  transport.yaml
configs/train/: cloudops_only.yaml  cloudops_vs_energy.yaml  energy_only.yaml  joint.yaml  transport_only.yaml
data/: prepare_data.py  split_utils.py
notebooks/: fev_comparison.ipynb  gift_comparison.ipynb  visualize_domains.ipynb
scripts/: gift_analysis.py
src/data_for_tsfms/: config_utils.py  evaluation_utils.py  hf_utils.py  split_utils.py
src/data_for_tsfms/cli/: app.py  evaluate.py  evaluate_fev.py  prepare_data.py  train.py
