[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "data-for-tsfms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "chronos-forecasting>=2.2.2",
    "datasets>=4.6.1",
    "matplotlib>=3.10.7",
    "mlflow>=3.10.0",
    "pyyaml>=6.0.3",
    "torch>=2.10.0",
    "typer>=0.24.1",
    "typer-config>=1.5.1",
]

[project.scripts]
tsfms = "data_for_tsfms.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/data_for_tsfms"]
